// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text CSS Properties can be passed as props 1`] = `
<span
  className="0-0-2-1"
  style={
    Object {
      "color": undefined,
      "fontWeight": "normal",
      "opacity": 0.4,
      "textAlign": "start",
      "textDecoration": "underline",
    }
  }
>
  My custom text
</span>
`;

exports[`Text Can customize color via props 1`] = `
<span
  className="0-0-2-1"
  style={
    Object {
      "color": "#F45B69",
      "fontWeight": "normal",
      "textAlign": "start",
    }
  }
>
  My custom text
</span>
`;

exports[`Text Can specify font-size via props 1`] = `
Array [
  <h4
    className="2-0-2-3"
    style={
      Object {
        "color": undefined,
        "fontWeight": 700,
        "textAlign": "start",
      }
    }
  >
    My custom text
  </h4>,
  <h3
    className="3-0-2-4"
    style={
      Object {
        "color": undefined,
        "fontWeight": 700,
        "textAlign": "start",
      }
    }
  >
    My custom text
  </h3>,
]
`;

exports[`Text Can specify weight via props 1`] = `
<span
  className="0-0-2-1"
  style={
    Object {
      "color": undefined,
      "fontWeight": 700,
      "textAlign": "start",
    }
  }
>
  My custom text
</span>
`;
